--- a/B15StudentManagement/app/src/main/res/layout/activity_main.xml
+++ b/B15StudentManagement/app/src/main/res/layout/activity_main.xml
@@ -102,11 +102,11 @@
             android:text="@string/btn_add" />
 
         <Button
-            android:id="@+id/btn_edit"
+            android:id="@+id/btn_update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/btn_edit"
+            android:text="@string/btn_update"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"/>
 
