--- a/B8Camera/app/src/main/res/layout/activity_main.xml
+++ b/B8Camera/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:scaleType="fitCenter"
         android:src="@drawable/panda" />
 
-    <ImageButton
-        android:id="@+id/btn_capture"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
-        android:layout_gravity="center"
-        android:background="#00000000"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/icon" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/btn_gallery"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="start"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/gallery"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="80dp"/>
+
+        <ImageButton
+            android:id="@+id/btn_capture"
+            android:layout_width="88dp"
+            android:layout_height="88dp"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon"/>
+    </LinearLayout>
 
 </LinearLayout>
