--- a/SQLiteBookManager/app/src/main/res/layout/activity_add_book.xml
+++ b/SQLiteBookManager/app/src/main/res/layout/activity_add_book.xml
@@ -27,10 +27,22 @@
         android:layout_height="wrap_content"
         android:hint="Tags" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
     <Button
         android:id="@+id/buttonAddBook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Book" />
+        android:text="Add Book"
+        android:layout_marginEnd="80dp"/>
+        <Button
+            android:id="@+id/btn_back_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back" />
+    </LinearLayout>
 
 </LinearLayout>
