--- a/TestFirebase/app/src/main/res/layout/activity_main.xml
+++ b/TestFirebase/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.MainActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    >
 
     <EditText
         android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Name" />
+        android:hint="Input Name"
+        android:autofillHints=""
+        android:inputType="text"
+        />
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email" />
+        android:autofillHints=""
+        android:hint="Input Email"
+        android:inputType="text"
+        tools:ignore="TextFields,TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/btn_add"
