--- a/B15StudentManagement/app/src/main/res/layout/activity_main.xml
+++ b/B15StudentManagement/app/src/main/res/layout/activity_main.xml
@@ -95,6 +95,7 @@
     </LinearLayout>
 
     <LinearLayout
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -118,24 +119,26 @@
     </LinearLayout>
 
     <LinearLayout
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp"
-        >
-        
+        android:padding="8dp">
+
         <Button
             android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/btn_delete" />
+
         <Button
             android:id="@+id/btn_reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Làm trống"
+            android:padding="0dp"
+            android:text="@string/btn_null_title"
             android:layout_marginStart="8dp"
             />
         
